--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>testWebpack</title>
 </head>
 <body>
+    <div id="json"></div>
     <div id="nav"></div>
     <div id="blackContent"></div>
     <div><img src="./images/adun.jpg"/></div>
